Fixed callout card emoji alignment
Refs https://github.com/TryGhost/Team/issues/1206

--- a/core/frontend/src/cards/css/callout.css
+++ b/core/frontend/src/cards/css/callout.css
@@ -1,6 +1,5 @@
 .kg-card-callout {
     display: flex;
-    align-items: center;
     padding: 20px 28px;
     border-radius: 3px;
 }
@@ -44,7 +43,7 @@
 }
 
 .kg-callout-emoji {
-    padding-right: 12px;
+    padding-right: 16px;
     line-height: 1.6;
     font-size: 2rem;
 }
